crates/macro/ui-tests/missing-catch.stderr
error[E0277]: the trait bound `Result<wasm_bindgen::JsValue, wasm_bindgen::JsValue>: FromWasmAbi` is not satisfied
 --> ui-tests/missing-catch.rs:6:9
  |
6 |     pub fn foo() -> Result<JsValue, JsValue>;
  |            ^^^ the trait `FromWasmAbi` is not implemented for `Result<wasm_bindgen::JsValue, wasm_bindgen::JsValue>`
  |
  = help: the following other types implement trait `FromWasmAbi`:
            *const T
            *mut T
            Box<[T]>
            Box<[f32]>
            Box<[f64]>
            Box<[i16]>
            Box<[i32]>
            Box<[i64]>
          and 35 others
